fixed gradient overflowing body

--- a/style.css
+++ b/style.css
@@ -94,11 +94,21 @@
     font-family: 'Satoshi', sans-serif;
 }
 
+html{
+    overflow-x: hidden;
+    margin: 0px;
+    padding: 0px;
+}
+
 body{
     background-color: var(--background);
+    width: 100%;
+    height: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    margin: 0px;
+    padding: 0px;
     overflow-x: hidden;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
@@ -226,29 +236,50 @@ body{
     font-family: 'Clash Display';
 }
 
-.gradient{
-    position: absolute;
+.gradient-box{
     z-index: 0;
+    position: absolute;
+    overflow: clip;
+}
+
+.gradient-box1{
+    top: 346px;
+    left: -190px;
     width: 492px;
     height: 492px;
+}
+
+.gradient{
     border-radius: 492px;
     background: url(./images/gradient.png);
     opacity: 0.2;
 }
 
 .gradient1{
-    top: 346px;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+}
+
+.gradient-box2{
+    top: 2800px;
+    right: 0px;
 }
 
 .gradient2{
-    top: 2800px;
-    right: 12px;
+    width: 492px;
+    height: 492px;
     opacity: 0.3;
 }
 
-.gradient3{
+.gradient-box3{
     top: 3350px;
-    left: 12px;
+    left: -190px;
+}
+
+.gradient3{
+    width: 492px;
+    height: 492px;
     opacity: 0.3;
 }
 
@@ -398,6 +429,7 @@ body{
 }
 
 .toolkit-section{
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
